reg pages updated

--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Shared/AdminLayout.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Shared/AdminLayout.cshtml
@@ -55,6 +55,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Logout", "Validation")">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("AdminReg", "Validation")">Add new Admin</a>
+                </li>
+
             </ul>
         </div>
     </nav>
