--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/PoliciesList.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/PoliciesList.cshtml
@@ -36,6 +36,8 @@
         <th>Policy Number</th>
         <th>Applied Date</th>
         <th>Category</th>
+        <th>Policy Type</th>
+        <th>Price</th>
     </tr>
     @foreach (var policy in Model)
     {
@@ -44,6 +46,8 @@
             <td>@policy.PolicyNumber</td>
             <td>@policy.AppliedDate.ToShortDateString()</td>
             <td>@policy.Category</td>
+            <td>@policy.PolicyType</td>
+            <td>@policy.Price</td>
         </tr>
     }
 </table>
