--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/AppliedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/AppliedPolicies.cshtml
@@ -53,6 +53,8 @@
             <th>Policy Number</th>
             <th>Applied Date</th>
             <th>Category</th>
+            <th>Policy Type</th>
+            <th>Price</th>
             <th>Customer ID</th>
             <th>Status</th>
         </tr>
@@ -63,6 +65,8 @@
                 <td>@appliedPolicy.PolicyNumber</td>
                 <td>@appliedPolicy.AppliedDate.ToShortDateString()</td>
                 <td>@appliedPolicy.Category</td>
+                <td>@appliedPolicy.PolicyType</td>
+                <td>@appliedPolicy.Price</td>
                 <td>@appliedPolicy.CustomerId</td>
                 <td>@appliedPolicy.StatusCode</td>
             </tr>
