--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/ViewPoliciesToApply.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/ViewPoliciesToApply.cshtml
@@ -71,6 +71,8 @@
             <th>Policy Number</th>
             <th>Applied Date</th>
             <th>Category</th>
+            <th>Policy Type</th>
+            <th>Price</th>
             <th>Action</th>
         </tr>
         @foreach (var policy in Model)
@@ -80,6 +82,8 @@
                 <td>@policy.PolicyNumber</td>
                 <td>@policy.AppliedDate.ToShortDateString()</td>
                 <td>@policy.Category</td>
+                <td>@policy.PolicyType</td>
+                <td>@policy.Price</td>
                 <td>
                     @using (Html.BeginForm("Apply", "Customer", FormMethod.Post))
                     {
