--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPoliciesEdit.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPoliciesEdit.cshtml
@@ -60,6 +60,8 @@
         <th style="background-color: #343a40;">Policy Number</th>
         <th style="background-color: #343a40;">Applied Date</th>
         <th style="background-color: #343a40;">Category</th>
+        <th style="background-color: #343a40;">Policy Type</th>
+        <th style="background-color: #343a40;">Price</th>
         <!-- Add other columns for additional properties -->
         <th style="background-color: #343a40;">Action</th>
     </tr>
@@ -70,6 +72,9 @@
             <td style="background-color: #8faebd;">@policy.PolicyNumber</td>
             <td style="background-color: #8faebd;">@policy.AppliedDate.ToString("yyyy-MM-dd")</td>
             <td style="background-color: #8faebd;">@policy.Category</td>
+            <td style="background-color: #8faebd;">@policy.PolicyType</td>
+            <td style="background-color: #8faebd;">@policy.Price</td>
+
             <!-- Add other columns for additional properties -->
             <td style="background-color: #8faebd;">
                 @Html.ActionLink("Edit", "EditPolicy", "Policy", new { policyNumber = policy.PolicyNumber }, new { @class = "edit-link" })
