--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPolicy.cshtml
@@ -53,9 +53,10 @@
         <tr>
             <th>Policy ID</th>
             <th>Policy Number</th>
-
             <th>Applied Date</th>
             <th>Category</th>
+            <th>Policy Type</th>
+            <th>Price</th>
         </tr>
         @foreach (var policy in Model)
         {
@@ -65,6 +66,8 @@
 
                 <td>@policy.AppliedDate.ToShortDateString()</td>
                 <td>@policy.Category</td>
+                <td>@policy.PolicyType</td>
+                <td>@policy.Price</td>
             </tr>
         }
     </table>
