--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
@@ -53,6 +53,8 @@
             <th>Policy Number</th>
             <th>Applied Date</th>
             <th>Category</th>
+            <th>Policy Type</th>
+            <th>Price</th>
             <th>Status</th>
         </tr>
     </thead>
@@ -64,6 +66,8 @@
                     <td>@policy.PolicyNumber</td>
                     <td>@policy.AppliedDate.ToShortDateString()</td>
                     <td>@policy.Category</td>
+                    <td>@policy.PolicyType</td>
+                    <td>@policy.Price</td>
                     <td>
                         <span class="status-approved">Approved</span>
                     </td>
