--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
@@ -55,6 +55,8 @@
             <th>Policy Number</th>
             <th>Applied Date</th>
             <th>Category</th>
+            <th>Policy Type</th>
+            <th>Price</th>
             <th>Status</th>
         </tr>
     </thead>
@@ -67,7 +69,8 @@
                     <td>@policy.PolicyNumber</td>
                     <td>@policy.AppliedDate.ToShortDateString()</td>
                     <td>@policy.Category</td>
-
+                    <td>@policy.PolicyType</td>
+                    <td>@policy.Price</td>
                     <td>
                         <span class="status-disapproved">Disapproved</span>
                     </td>
