--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicy.cshtml
@@ -37,7 +37,18 @@
             @Html.ValidationMessageFor(model => model.Category)
         </div>
 
-        <!-- Add other form fields for additional properties -->
+        <div>
+            <label for="PolicyType">Policy Type:</label>
+            @Html.TextBoxFor(model => model.PolicyType)
+            @Html.ValidationMessageFor(model => model.PolicyType)
+        </div>
+
+        <div>
+            <label for="Price">Price:</label>
+            @Html.TextBoxFor(model => model.Price)
+            @Html.ValidationMessageFor(model => model.Price)
+        </div>
+
 
         <div>
             <input type="submit" value="Submit" />
