--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/EditPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/EditPolicy.cshtml
@@ -28,7 +28,17 @@
         @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
     </div>
 
-    <!-- Add other form fields for additional properties -->
+    <div class="form-group">
+        @Html.LabelFor(model => model.PolicyType)
+        @Html.EditorFor(model => model.PolicyType, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.PolicyType, "", new { @class = "text-danger" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Price)
+        @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+    </div>
 
     <div class="form-group">
         <input type="submit" value="Save Changes" class="btn btn-primary" />
