--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Shared/_Layout.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("CustomerReg", "CustomerReg", "Validation", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Sign Up", "CustomerReg", "Validation", new { area = "" }, new { @class = "nav-link" })</li>
 
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="loginDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
