--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicy.cshtml
@@ -26,9 +26,9 @@
 
 
         <div>
-            <label for="AppliedDate">Applied Date:</label>
-            @Html.TextBoxFor(model => model.AppliedDate, new { type = "date" })
-            @Html.ValidationMessageFor(model => model.AppliedDate)
+            <label for="AppliedDate">Date Of Creation:</label>
+            @Html.TextBoxFor(model => model.DateOfCreation, new { type = "date" })
+            @Html.ValidationMessageFor(model => model.DateOfCreation)
         </div>
 
         <div>
