--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/DeletePolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/DeletePolicy.cshtml
@@ -13,7 +13,7 @@
 </div>
 
 <div>
-    <strong>Applied Date:</strong> @Model.AppliedDate.ToString("yyyy-MM-dd")
+    <strong>Date Of Creation:</strong> @Model.DateOfCreation.ToString("yyyy-MM-dd")
 </div>
 
 <div>
