--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/EditPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/EditPolicy.cshtml
@@ -17,9 +17,9 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.AppliedDate)
-        @Html.EditorFor(model => model.AppliedDate, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.AppliedDate, "", new { @class = "text-danger" })
+        @Html.LabelFor(model => model.DateOfCreation)
+        @Html.EditorFor(model => model.DateOfCreation, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.DateOfCreation, "", new { @class = "text-danger" })
     </div>
 
     <div class="form-group">
