--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPoliciesEdit.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPoliciesEdit.cshtml
@@ -58,7 +58,7 @@
 <table class="table">
     <tr class="heading-row">
         <th style="background-color: #343a40;">Policy Number</th>
-        <th style="background-color: #343a40;">Applied Date</th>
+        <th style="background-color: #343a40;">Date Of Creation</th>
         <th style="background-color: #343a40;">Category</th>
         <th style="background-color: #343a40;">Policy Type</th>
         <th style="background-color: #343a40;">Price</th>
@@ -69,7 +69,7 @@
     {
         <tr>
             <td style="background-color: #8faebd;">@policy.PolicyNumber</td>
-            <td style="background-color: #8faebd;">@policy.AppliedDate.ToString("yyyy-MM-dd")</td>
+            <td style="background-color: #8faebd;">@policy.DateOfCreation.ToString("yyyy-MM-dd")</td>
             <td style="background-color: #8faebd;">@policy.Category</td>
             <td style="background-color: #8faebd;">@policy.PolicyType</td>
             <td style="background-color: #8faebd;">@policy.Price</td>
