--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/PoliciesList.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/PoliciesList.cshtml
@@ -34,7 +34,7 @@
     <tr>
         <th>Policy Id</th>
         <th>Policy Number</th>
-        <th>Applied Date</th>
+        <th>Date Of Creation</th>
         <th>Category</th>
         <th>Policy Type</th>
         <th>Price</th>
@@ -44,7 +44,7 @@
         <tr>
             <td>@policy.PolicyId</td>
             <td>@policy.PolicyNumber</td>
-            <td>@policy.AppliedDate.ToShortDateString()</td>
+            <td>@policy.DateOfCreation.ToShortDateString()</td>
             <td>@policy.Category</td>
             <td>@policy.PolicyType</td>
             <td>@policy.Price</td>
