--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/ViewPoliciesToApply.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/ViewPoliciesToApply.cshtml
@@ -69,7 +69,7 @@
         <tr>
             <th>Policy ID</th>
             <th>Policy Number</th>
-            <th>Applied Date</th>
+            <th>Date Of Creation</th>
             <th>Category</th>
             <th>Policy Type</th>
             <th>Price</th>
@@ -80,7 +80,7 @@
             <tr>
                 <td>@policy.PolicyId</td>
                 <td>@policy.PolicyNumber</td>
-                <td>@policy.AppliedDate.ToShortDateString()</td>
+                <td>@policy.DateOfCreation.ToShortDateString()</td>
                 <td>@policy.Category</td>
                 <td>@policy.PolicyType</td>
                 <td>@policy.Price</td>
