dashboard button added

--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/Categories.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/Categories.cshtml
@@ -4,7 +4,15 @@
     body {
         background-color: lightgray;
     }
-
+    .navbar-nav.flex-grow-1{
+        display:none;
+    }
+    #right-nav{
+        display:block;
+    }
+    #cust-dash {
+        display: none;
+    }
     table {
         width: %;
         border-collapse: collapse;
@@ -25,9 +33,7 @@
     td {
         background-color: #8faebd;
     }
-    .sidebar{
-        display:none;
-    }
+    
 </style>
 
 
