--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
@@ -11,6 +11,17 @@
     h2{
         color:black;  /*color:red for heading*/
     }
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
+
+    #right-nav {
+        display: block;
+    }
+
+    #cust-dash {
+        display: none;
+    }
 
     table{
         width: 100%;
