--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/GetAllCustomers.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/GetAllCustomers.cshtml
@@ -9,6 +9,17 @@
     body{
         background-color:lightgray;
     }
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
+
+    #right-nav {
+        display: block;
+    }
+
+    #cust-dash {
+        display: none;
+    }
     table {
         width: 100%;
         border-collapse: collapse;
