--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/PendingPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/PendingPolicies.cshtml
@@ -6,6 +6,17 @@
     body{
         background-color:lightgray;
     }
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
+
+    #right-nav {
+        display: block;
+    }
+
+    #cust-dash {
+        display: none;
+    }
     h2 {
         color: black;
     }
