--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/ViewPoliciesToApply.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/ViewPoliciesToApply.cshtml
@@ -16,7 +16,17 @@
             padding: 0;
             box-sizing: border-box;
         }
+        .navbar-nav.flex-grow-1 {
+            display: none;
+        }
 
+        #right-nav {
+            display: block;
+        }
+
+        #admin-dash {
+            display: none;
+        }
         h2 {
             color: black; 
         }
