--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPolicy.cshtml
@@ -13,7 +13,17 @@
             margin: 0;
             padding: 0;
         }
+        .navbar-nav.flex-grow-1 {
+            display: none;
+        }
 
+        #right-nav {
+            display: block;
+        }
+
+        #cust-dash {
+            display: none;
+        }
         h2 {
             color: #333;
         }
