--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
@@ -10,6 +10,17 @@
     h2{
         color: #007bff;
     }
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
+
+    #right-nav {
+        display: block;
+    }
+
+    #cust-dash {
+        display: none;
+    }
 
     table{
         width:100%;
