--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/Question.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/Question.cshtml
@@ -7,6 +7,17 @@
     body{
         background-color:lightgray;
     }
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
+
+    #right-nav {
+        display: block;
+    }
+
+    #cust-dash {
+        display: none;
+    }
     .replied {
         color: green;
     }
