--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/AppliedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/AppliedPolicies.cshtml
@@ -14,7 +14,17 @@
             color: #333; 
             margin: 20px;
         }
+        .navbar-nav.flex-grow-1 {
+            display: none;
+        }
 
+        #right-nav {
+            display: block;
+        }
+
+        #admin-dash {
+            display: none;
+        }
         h2 {
             color: black; 
         }
