--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/AskQuestion.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/AskQuestion.cshtml
@@ -17,7 +17,17 @@
         color: #333;
         margin: 20px;
     }
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
 
+    #right-nav {
+        display: block;
+    }
+
+    #admin-dash {
+        display: none;
+    }
     h2 {
         color: black;
     }
