--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicy.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicy.cshtml
@@ -3,6 +3,17 @@
         body{
             background-color:lightgray;
         }
+        .navbar-nav.flex-grow-1 {
+            display: none;
+        }
+
+        #right-nav {
+            display: block;
+        }
+
+        #cust-dash {
+            display: none;
+        }
     </style>
 
 <!DOCTYPE html>
