--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
@@ -37,8 +37,8 @@
     }
 
     th {
-        background-color: #343a40; /*blue background*/
-        color: #fff; /*white*/
+        background-color: #343a40; 
+        color: #fff; 
     }
 
     tbody tr:hover{
