--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
@@ -9,7 +9,7 @@
         background-color:lightgray;
     }
     h2{
-        color:black;  /*color:red for heading*/
+        color:black;  
     }
     .navbar-nav.flex-grow-1 {
         display: none;
