--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPoliciesEdit.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/ShowAllPoliciesEdit.cshtml
@@ -35,8 +35,8 @@
     }
 
     th {
-        background-color: #343a40; /* Blue color for heading */
-        color: #fff; /* White text for heading */
+        background-color: #343a40; 
+        color: #fff; 
     }
 
     td {
@@ -47,20 +47,20 @@
         color: #3498db;
         text-decoration: none;
         font-weight: bold;
-        background-color: #fff; /* White background for button */
-        border: 1px solid #3498db; /* Blue border for button */
+        background-color: #fff; 
+        border: 1px solid #3498db; 
         padding: 6px 12px;
         border-radius: 4px;
     }
 
         .edit-link:hover {
             color: #1e87d3;
-            background-color: #e6f7ff; /* Light blue background on hover */
+            background-color: #e6f7ff; 
         }
 
     .heading-row {
-        background-color: #3498db; /* Blue color for the heading row */
-        color: #fff; /* White text for the heading row */
+        background-color: #3498db; 
+        color: #fff; 
     }
 </style>
 
