--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Validation/Logout.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Validation/Logout.cshtml
@@ -5,7 +5,7 @@
     <script>
         // Redirect to home page
         function redirectToHomePage() {
-            window.location.href = "@Url.Action("Index", "Home")"; // Replace with your actual home page URL
+            window.location.href = "@Url.Action("Index", "Home")"; 
         }
 
         // Disable back button and redirect to home page
