--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Shared/AdminLayout.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Shared/AdminLayout.cshtml
@@ -9,7 +9,7 @@
     <title></title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom styles for the sidebar and web form */
+        
         .sidebar {
             height: 100%;
             width: 250px;
@@ -23,12 +23,12 @@
 
             .sidebar .profile-picture {
                 background-color: aliceblue;
-                width: 100px; /* Adjust the size of your profile picture */
-                height: 100px; /* Ensure it's a square */
-                border-radius: 50%; /* Make it round */
+                width: 100px; 
+                height: 100px; 
+                border-radius: 50%; 
                 display: block;
                 margin: 0 auto;
-                overflow: hidden; /* Hide overflow outside the circle */
+                overflow: hidden; 
             }
 
             .sidebar a {
