changes in question views

--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/DisapprovedPolicies.cshtml
@@ -64,6 +64,7 @@
         <tr>
             <th>Policy Id</th>
             <th>Policy Number</th>
+            <th>Customer Id</th>
             <th>Applied Date</th>
             <th>Category</th>
             <th>Policy Type</th>
@@ -78,6 +79,7 @@
                 <tr>
                     <td>@policy.AppliedPolicyId</td>
                     <td>@policy.PolicyNumber</td>
+                    <td>@policy.CustomerId</td>
                     <td>@policy.AppliedDate.ToShortDateString()</td>
                     <td>@policy.Category</td>
                     <td>@policy.PolicyType</td>
