--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/Dashboard.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/Dashboard.cshtml
@@ -87,7 +87,7 @@
             <a href="@Url.Action("AskCustomerId", "Customer")">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Total Questions</h5>
+                        <h5 class="card-title">Your Questions</h5>
                         <br /> <br />
                     </div>
                 </div>
