--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/Success.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Customer/Success.cshtml
@@ -2,7 +2,19 @@
     ViewBag.Title = "Success";
     Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
+<style>
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
 
+    #right-nav {
+        display: block;
+    }
+
+    #admin-dash {
+        display: none;
+    }
+</style>
 <h2>Success</h2>
 
 <p>Your Question has been Successfully Submitted. Thank you!</p>
