--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/AllAppliedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/AllAppliedPolicies.cshtml
@@ -42,6 +42,7 @@
         <tr>
             <th>Policy Id</th>
             <th>Policy Number</th>
+            <th>Customer Id</th>
             <th>Applied Date</th>
             <th>Category</th>
             <th>Policy Type</th>
@@ -57,6 +58,7 @@
                 <tr>
                     <td>@policy.AppliedPolicyId</td>
                     <td>@policy.PolicyNumber</td>
+                    <td>@policy.CustomerId</td>
                     <td>@policy.AppliedDate.ToShortDateString()</td>
                     <td>@policy.Category</td>
                     <td>@policy.PolicyType</td>
