--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/ApprovedPolicies.cshtml
@@ -62,6 +62,7 @@
         <tr>
             <th>Policy Id</th>
             <th>Policy Number</th>
+            <th>Customer Id</th>
             <th>Applied Date</th>
             <th>Category</th>
             <th>Policy Type</th>
@@ -75,6 +76,7 @@
                 <tr>
                     <td>@policy.AppliedPolicyId</td>
                     <td>@policy.PolicyNumber</td>
+                    <td>@policy.CustomerId</td>
                     <td>@policy.AppliedDate.ToShortDateString()</td>
                     <td>@policy.Category</td>
                     <td>@policy.PolicyType</td>
