--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/Question.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Admin/Question.cshtml
@@ -28,7 +28,7 @@
 
     thead th {
         background-color: #343a40;
-        color: #000;
+        color: #fff;
         font-weight: bold;
     }
 
@@ -36,7 +36,6 @@
         width: 100%;
         border-collapse: collapse;
         margin-top: 20px;
-        font-family: 'Times New Roman';
         color: black;
     }
 
