--- a/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicySuccess.cshtml
+++ b/InsuranceManagementSystem/InsuranceManagementSystem/UI/Views/Policy/AddPolicySuccess.cshtml
@@ -1,4 +1,17 @@
-﻿<h2>Policy Added Successfully</h2>
+﻿<style>
+    .navbar-nav.flex-grow-1 {
+        display: none;
+    }
+
+    #right-nav {
+        display: block;
+    }
+
+    #cust-dash {
+        display: none;
+    }
+</style>
+<h2>Policy Added Successfully</h2>
 
 <p>Thank you for adding a new policy. You can view the details on the <a href="@Url.Action("ShowAllPolicy", "Policy")">policies page</a>.</p>
 
